--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-offline": "^3.3.2",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.7.1",
+    "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-remark-images": "^3.4.1",
     "gatsby-remark-prismjs": "^3.6.0",
     "gatsby-source-filesystem": "^2.4.1",
