--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-plugin-styled-components": "^3.3.14",
+    "gatsby-remark-copy-linked-files": "^2.7.0",
     "gatsby-remark-images": "^3.4.1",
     "gatsby-remark-prismjs": "^3.6.0",
     "gatsby-source-filesystem": "^2.4.1",
